2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/diskfile.c: Parse negative spindle (-1).

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c: Balance subcommand use displayunit.
	* server-src/amcheck.c: Small cleanup.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Undo patch from 2004-11-11, it break
	  the file: dirver.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Remove trace.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* NEWS: new displayunit global option to select the unit use to
	  display number: k=kilo, m=mega, g=giga, t=tera
	* server-src/conffile.c: Parse displayunit,
	  new fonction getcont_unit_divisor().
	* server-src/conffile.h: Prototype of getcont_unit_divisor().
	* server-src/amcheck.c: Use displayunit to display holding disk size.
	* server-src/amstatus.pl.in: Use displayunit to display dump size.
	* server-src/reporter.c: use displayunit to display dump size.
	* man/amanda.8.in: Document displayunit.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c: Change 'Daily' for 'Incr.'.

2004-11-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in Fix for level -1.

2004-11-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Daniel Widyono <widyono@seas.upenn.edu>

	* changer-src/chg-zd-mtx.sh.in: Fix for library with barcode.


2004-11-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c: Print the time in the FINISH line.
	* server-src/reporter.c: The estimate time is based on the planner
	  FINISH line.

2004-11-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Read empty file.

2004-11-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
