@@ -1,4 +1,8 @@
 2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/driver.c: tape_left should not become negative.
+
+2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 	Patch by Orion Poplawski <orion@cora.nwra.com>
 
 	* server-src/diskfile.c: Parse negative spindle (-1).
